# semantic_cache

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_and_test.sh
semantic_kv/: __init__.py  client.py  embeddings.py  hash_ring.py  node.py  persistence.py  vector_index.py
tests/: benchmark.py  demo.py  quick_test.py  run_cluster.py  test_cluster.py
