[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-kv"
version = "0.1.0"
description = "Distributed semantic key-value cache with Apache Arrow Flight"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "pyarrow>=14.0.0",
    "hnswlib>=0.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "semantic-kv[embeddings,openai,dev]",
]

[project.scripts]
semantic-kv-node = "semantic_kv.node:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_kv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
